<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TCPConnect" Id="{132c23af-1d09-4b6c-a9be-0a64f6ccdb0b}">
    <Declaration><![CDATA[TYPE ST_TCPConnect :
STRUCT
	bIsSocketConnected	:BOOL;
	sRemoteHost			:STRING;
	nRemotePort			:UDINT;
	hSocket				:T_HSOCKET;
	bSocketConnect		:BOOL;
	tTimeOut			:TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>