<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_IO" Id="{32f87f90-81e8-4af6-ac5b-782ff46b80bd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stItemSimulator		:ST_ItemSimulator_IO;
	stTCPConnection		:ST_TCPConnection_IO;
	stTimestamp			:ST_Timestamp_IO;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>